src/App.css
html {
  height: 100%;
}

body {
  background-color: #060e1f;
  color: rgb(255, 0, 140);
  font-family: 'Quicksand', sans-serif;
}

h1 {
  font-size: 2.5em;
  font-weight: lighter;
  margin: .5em;
  margin-top: 1em;
  margin-bottom: 1em;
  text-align: center;
  background: -webkit-linear-gradient(rgb(255, 0, 128), rgb(255, 0, 255));
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.emoji {

  -webkit-text-fill-color: white;
}

p {
  font-size: 2em;
}

img {
  width: 80%;
  mix-blend-mode: darken;
  border-radius: 50%;
  box-shadow: 0px 0px 50px rgba(255, 0, 170, 0.2);
}

.image {
  text-align: center;
}

.swiper {
  display: flex;
  overflow: auto;
  margin-top: .5em;
}

.swiper p {
  margin: .5em;
}

.swiper::after {
  content: "";
  position: absolute;
  right: 0;
  height: 50px;
  width: 50%;
  background: linear-gradient(90deg, transparent, #060e1f);
}

.swiper::before {
  content: "";
  position: absolute;
  left: 0;
  height: 50px;
  width: 50%;
  background: linear-gradient(90deg, #060e1f, transparent );
}

::-webkit-scrollbar { 
  display: none; 
}

